// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`tabbar-appbar > dist > app.js 1`] = `
"App({
  globalData: {},
  onLaunch() {
  }
});
"
`;

exports[`tabbar-appbar > dist > app.json 1`] = `
"{
  "pages": [
    "pages/index/index",
    "pages/index/vue"
  ],
  "window": {},
  "style": "v2",
  "componentFramework": "glass-easel",
  "sitemapLocation": "sitemap.json",
  "tabBar": {
    "custom": true
  },
  "appBar": {},
  "usingComponents": {
    "Test": "/components/Test"
  }
}"
`;

exports[`tabbar-appbar > dist > app-bar/index.js 1`] = `
"Component({});
"
`;

exports[`tabbar-appbar > dist > app-bar/index.json 1`] = `
"{
  "component": true,
  "styleIsolation": "apply-shared",
  "usingComponents": {}
}"
`;

exports[`tabbar-appbar > dist > app-bar/index.wxml 1`] = `"<view>hello weapp-vite! from app-bar</view>"`;

exports[`tabbar-appbar > dist > app-bar/index.wxss 1`] = `
".ss {
  color: red;
}/*$vite$:1*/"
`;

exports[`tabbar-appbar > dist > async2-DNpXAHeu.js 1`] = `
"Object.defineProperty(exports, Symbol.toStringTag, { value: "Module" });
const async2 = "async2";
const async2$1 = 2;
exports.async2 = async2;
exports.default = async2$1;
"
`;

exports[`tabbar-appbar > dist > components/Navbar/Navbar.js 1`] = `
"Component({});
"
`;

exports[`tabbar-appbar > dist > components/Navbar/Navbar.json 1`] = `
"{
  "component": true,
  "styleIsolation": "apply-shared",
  "usingComponents": {}
}"
`;

exports[`tabbar-appbar > dist > components/Navbar/Navbar.wxml 1`] = `
"<view>Navbar</view>
"
`;

exports[`tabbar-appbar > dist > components/Test/index.js 1`] = `
"Component({});
"
`;

exports[`tabbar-appbar > dist > components/Test/index.json 1`] = `
"{
  "component": true,
  "styleIsolation": "apply-shared",
  "usingComponents": {}
}"
`;

exports[`tabbar-appbar > dist > components/Test/index.wxml 1`] = `"<view>Navbar</view>"`;

exports[`tabbar-appbar > dist > components/Test/index.wxss 1`] = `
".test {
  clear: both;
}/*$vite$:1*/"
`;

exports[`tabbar-appbar > dist > custom-tab-bar/index.js 1`] = `
"const other = require("../other-Cdn3bISN.js");
const a = other.__CJS__export_default__ || other.__CJS__import__1__;
Component({
  lifetimes: {
    attached() {
      console.log(a);
    }
  }
});
"
`;

exports[`tabbar-appbar > dist > custom-tab-bar/index.json 1`] = `
"{
  "component": true,
  "styleIsolation": "apply-shared",
  "usingComponents": {}
}"
`;

exports[`tabbar-appbar > dist > custom-tab-bar/index.wxml 1`] = `"<view class="pb-8 pt-4 bg-[#af6ec5] flex justify-center">hello weapp-vite! aa</view>"`;

exports[`tabbar-appbar > dist > custom-tab-bar/index.wxss 1`] = `
".a {
  color: red;
}/*$vite$:1*/"
`;

exports[`tabbar-appbar > dist > other-Cdn3bISN.js 1`] = `
"var module$1 = { exports: {} };
const other = "other";
module$1.exports = {
  other
};
const __CJS__export_default__ = (module$1.exports == null ? {} : module$1.exports).default || module$1.exports;
const __CJS__import__1__ = /* @__PURE__ */ Object.freeze(/* @__PURE__ */ Object.defineProperty({
  __proto__: null,
  default: __CJS__export_default__
}, Symbol.toStringTag, { value: "Module" }));
exports.__CJS__export_default__ = __CJS__export_default__;
exports.__CJS__import__1__ = __CJS__import__1__;
"
`;

exports[`tabbar-appbar > dist > pages/index/async.js 1`] = `
"const async = "async";
const async$1 = 1;
"
`;

exports[`tabbar-appbar > dist > pages/index/index.js 1`] = `
"const other$1 = require("../../other-Cdn3bISN.js");
const part$1 = 3;
const { part } = part$1;
const { other } = other$1.__CJS__export_default__ || other$1.__CJS__import__1__;
Page({
  async onLoad() {
    const mod = await require.async("./async");
    const mod2 = await Promise.resolve().then(() => require("../../async2-DNpXAHeu.js"));
    console.log(part, other, mod, mod2);
  }
});
"
`;

exports[`tabbar-appbar > dist > pages/index/index.json 1`] = `
"{
  "usingComponents": {
    "Navbar": "/components/Navbar/Navbar"
  },
  "navigationBarTitleText": "初始模板"
}"
`;

exports[`tabbar-appbar > dist > pages/index/index.wxml 1`] = `
"<view>
  <Navbar />
  <view>Hello World From Weapp-vite!</view>
</view>
"
`;

exports[`tabbar-appbar > dist > sitemap.json 1`] = `
"{
  "desc": "关于本文件的更多信息，请参考文档 https://developers.weixin.qq.com/miniprogram/dev/framework/sitemap.html",
  "rules": [
    {
      "action": "allow",
      "page": "*"
    }
  ]
}"
`;

exports[`tabbar-appbar > dist > theme.json 1`] = `
"{
  "light": {},
  "dark": {}
}"
`;

exports[`tabbar-appbar > dist 1`] = `
[
  "app-bar/index.js",
  "app-bar/index.json",
  "app-bar/index.wxml",
  "app-bar/index.wxss",
  "app.js",
  "app.json",
  "async2-DNpXAHeu.js",
  "components/Navbar/Navbar.js",
  "components/Navbar/Navbar.json",
  "components/Navbar/Navbar.wxml",
  "components/Test/index.js",
  "components/Test/index.json",
  "components/Test/index.wxml",
  "components/Test/index.wxss",
  "custom-tab-bar/index.js",
  "custom-tab-bar/index.json",
  "custom-tab-bar/index.wxml",
  "custom-tab-bar/index.wxss",
  "other-Cdn3bISN.js",
  "pages/index/async.js",
  "pages/index/index.js",
  "pages/index/index.json",
  "pages/index/index.wxml",
  "sitemap.json",
  "theme.json",
]
`;
